// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Login Login renders correctly when logged in 1`] = `null`;

exports[`pages/Login Login renders correctly when logged out 1`] = `
.glamor-1 {
  background: transparent url(test-file-stub) no-repeat center;
  min-height: 9rem;
  background-size: 100% auto;
  margin: 0 1rem;
}

.glamor-13 {
  max-width: 40rem;
  margin: 0 1rem;
}

.glamor-9 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}

.glamor-3 {
  color: #f44336;
  text-align: center;
  padding: 1rem;
}

.glamor-5 {
  padding-bottom: 1rem;
}

.glamor-11 {
  width: 100%;
}

@media (min-width:600px) {
  .glamor-1 {
    background-size: auto;
  }
}

@media (min-width:600px) {
  .glamor-13 {
    margin: 0 auto;
  }
}

<div>
  <div
    className="glamor-0 glamor-1"
  />
  <div
    className="MuiPaper-root-1 MuiPaper-shadow2-5 MuiPaper-rounded-2 glamor-12 glamor-13"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiCardContent-root-28 glamor-8 glamor-9"
      >
        <div
          className="glamor-2 glamor-3"
        />
        <div
          className="MuiFormControl-root-29 glamor-4 glamor-5"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          required={false}
        >
          <label
            className="MuiFormLabel-root-39 MuiInputLabel-root-33 MuiInputLabel-formControl-34 MuiInputLabel-animated-37"
            htmlFor="username"
          >
            Username
          </label>
          <div
            className="MuiInput-root-43 MuiInput-formControl-44 MuiInput-inkbar-45 MuiInput-underline-51"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-47 MuiInput-inputSingleline-54"
              defaultValue={undefined}
              disabled={false}
              id="username"
              name="username"
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="MuiFormControl-root-29 glamor-4 glamor-5"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          required={false}
        >
          <label
            className="MuiFormLabel-root-39 MuiInputLabel-root-33 MuiInputLabel-formControl-34 MuiInputLabel-animated-37"
            htmlFor="password"
          >
            Password
          </label>
          <div
            className="MuiInput-root-43 MuiInput-formControl-44 MuiInput-inkbar-45 MuiInput-underline-51"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-47 MuiInput-inputSingleline-54"
              defaultValue={undefined}
              disabled={false}
              id="password"
              name="password"
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="Password"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="MuiCardActions-root-57"
      >
        <button
          className="MuiButtonBase-root-73 MuiButton-root-59 glamor-10 MuiCardActions-actionSpacing-58 glamor-11"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
          type="submit"
        >
          <span
            className="MuiButton-label-61"
          >
            Login
          </span>
          <span
            className="MuiTouchRipple-root-75"
          />
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`pages/Login mapStateToProps should return logged in if logged in 1`] = `
Object {
  "loading": false,
  "redirectToReferrer": true,
}
`;

exports[`pages/Login mapStateToProps should return not logged in if logged out 1`] = `
Object {
  "loading": false,
  "redirectToReferrer": false,
}
`;
